[package]
name = "hdrify_rusty"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
image = { version = "0.25.6", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "avif",
] }
js-sys = "0.3"
png = "0.17.16"
wasm-bindgen = "=0.2.92"
