[package]
name = "hdrify_rusty"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# exact version required by jsr:@deno/wasmbuild@0.17.3
wasm-bindgen = "=0.2.92"

anyhow = "1.0.98"
image = { version = "0.25.6", default-features = false, features = [
    "avif",
    "gif",
    "jpeg",
    "png",
    "webp",
] }
js-sys = "0.3"
png = "0.17.16"
web-sys = "0.3"
